Select linked on armatures crashes when OpenGL Depth Picking is disabled #81200

Closed
opened 2020-09-26 11:09:11 +02:00 by Martin Sinnaeve · 13 comments

system

  • Precision-7710
  • CPU Intel(R) Core(TM) i7-6820HQ CPU @ 2.70GHz
  • 24 GB memory
  • GPU 1 AMD FirePro W5170M 2 GB
  	Driver version:	26.20.14003.3001
  • Win 10 pro version 1903 build 18362.1082

Blender Version
Broken: 2.90.1, 3e85bb34d0, master 2020-09-23 06:45
Worked: 2.83.5
Caused by 8b347fc2cd

Short description of error
Armature in edit mode (selfmade or rigify) using select linked (L-key) stops blender without warning.

Exact steps for others to reproduce the error
Disable OpenGL Depth Picking in preferences.
Add amature > edit mode > L-key > blender stops.

startup.blend

**system** - Precision-7710 - CPU Intel(R) Core(TM) i7-6820HQ CPU @ 2.70GHz - 24 GB memory - GPU 1 AMD FirePro W5170M 2 GB ``` Driver version: 26.20.14003.3001 ``` - Win 10 pro version 1903 build 18362.1082 **Blender Version** Broken: 2.90.1, 3e85bb34d0d7, master 2020-09-23 06:45 Worked: 2.83.5 Caused by 8b347fc2cd **Short description of error** Armature in edit mode (selfmade or rigify) using select linked (L-key) stops blender without warning. **Exact steps for others to reproduce the error** Disable OpenGL Depth Picking in preferences. Add amature > edit mode > L-key > blender stops. [startup.blend](https://archive.blender.org/developer/F8924034/startup.blend)

Added subscriber: @MartinSinnaeve

Added subscriber: @MartinSinnaeve

Added subscriber: @iss

Added subscriber: @iss

I wasn't able to reproduce this. Does this happen when you click on File > Defaults > Load Factory Settings?

I wasn't able to reproduce this. Does this happen when you click on File > Defaults > Load Factory Settings?

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

No, it works without a problem then, I have the Rigify and Add camera rigs add-ons enabled.
In attachment my startup and prefs files....

Thanks,

Martin{F8941184}

userpref.blend

No, it works without a problem then, I have the Rigify and Add camera rigs add-ons enabled. In attachment my startup and prefs files.... Thanks, Martin{[F8941184](https://archive.blender.org/developer/F8941184/startup.blend)} [userpref.blend](https://archive.blender.org/developer/F8941183/userpref.blend)

I was able to reproduce crash with provided preferences. Seems that this happend when OpenGL Depth Picking is disabled.

>	blender.exe!ed_armature_pick_bone_from_selectbuffer_impl(const bool is_editmode, Base * * bases, unsigned int bases_len, const unsigned int * buffer, short hits, bool findunsel, bool do_nearest, Base * * r_base) Line 210	C

 	blender.exe!ed_armature_pick_bone_impl(const bool is_editmode, bContext * C, const int * xy, bool findunsel, Base * * r_base) Line 362	C
 	[Inline Frame] blender.exe!ED_armature_pick_ebone(bContext *) Line 372	C
 	blender.exe!armature_select_linked_pick_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 575	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1304	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2132	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2442	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2739	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2869	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3367	C
 	blender.exe!WM_main(bContext * C) Line 485	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 535	C
 	[External Code]	
I was able to reproduce crash with provided preferences. Seems that this happend when OpenGL Depth Picking is disabled. ``` > blender.exe!ed_armature_pick_bone_from_selectbuffer_impl(const bool is_editmode, Base * * bases, unsigned int bases_len, const unsigned int * buffer, short hits, bool findunsel, bool do_nearest, Base * * r_base) Line 210 C blender.exe!ed_armature_pick_bone_impl(const bool is_editmode, bContext * C, const int * xy, bool findunsel, Base * * r_base) Line 362 C [Inline Frame] blender.exe!ED_armature_pick_ebone(bContext *) Line 372 C blender.exe!armature_select_linked_pick_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 575 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1304 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2132 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2442 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2739 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2869 C blender.exe!wm_event_do_handlers(bContext * C) Line 3367 C blender.exe!WM_main(bContext * C) Line 485 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 535 C [External Code] ```
Richard Antalik changed title from Select linked on armatures in EDIT-mode stops blender to Select linked on armatures crashes when OpenGL Depth Picking is disabled 2020-10-01 16:21:22 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This seems to be only true for a single bone?
I can reproduce on a single bone, but as soon as I extrude that single bone it is not crashing anymore.

In any case, this is caused by 8b347fc2cd

This seems to be only true for a single bone? I can reproduce on a single bone, but as soon as I extrude that single bone it is not crashing anymore. In any case, this is caused by 8b347fc2cd
Philipp Oeser self-assigned this 2020-10-01 18:04:38 +02:00
Member

This is also crashing with Select Shortest Path for bones btw.

This is also crashing with Select Shortest Path for bones btw.

This issue was referenced by e3b49bb850

This issue was referenced by e3b49bb850018ae73088b8d4e7c195206f8b2f31

Also with extruded bones....

Grtz, Martin

Also with extruded bones.... Grtz, Martin
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81200
No description provided.